.provarCaches/00Df2000001KKNJEA4/objects/X311_Event__kav.object
<CustomObject>
    <articleTypeChannelDisplay>
        <articleTypeTemplates>
            <channel>App</channel>
            <template>Toc</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Prm</channel>
            <template>Toc</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Csp</channel>
            <template>Toc</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Pkb</channel>
            <template>Toc</template>
        </articleTypeTemplates>
    </articleTypeChannelDisplay>
    <description>dated occasions within City limits</description>
    <fields>
        <fullName>Attachments__c</fullName>
        <label>Attachments</label>
        <type>File</type>
    </fields>
    <fields>
        <fullName>Closures__c</fullName>
        <label>Closures</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Content__c</fullName>
        <label>Content</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Internal_notes__c</fullName>
        <label>Internal notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Keywords__c</fullName>
        <label>Keywords</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Links__c</fullName>
        <label>Links</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Map__c</fullName>
        <label>Map</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <label>Content Owner</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>311</fullName>
                    <default>true</default>
                    <label>311</label>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Stop_date__c</fullName>
        <label>Stop date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Time__c</fullName>
        <label>Time</label>
        <length>175</length>
        <type>Text</type>
    </fields>
    <label>Event</label>
    <pluralLabel>Events</pluralLabel>
</CustomObject>